syntax = "proto3";

package events;
option go_package = "github.com/baccala1010/e-commerce/events/pkg/pb";

// Common event envelope
message EventEnvelope {
  string event_id = 1;
  string event_type = 2; // CREATE, UPDATE, DELETE
  string entity_type = 3; // Order, Product, User, etc.
  string timestamp = 4;
  string source_service = 5;
  bytes payload = 6; // Serialized event data
}

// Order events
message OrderEvent {
  string order_id = 1;
  string user_id = 2;
  float total_amount = 3;
  string status = 4;
  repeated OrderItem items = 5;
  string created_at = 6;
  string updated_at = 7;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  string category_id = 3;
  int32 quantity = 4;
  float unit_price = 5;
}

// Inventory events
message ProductEvent {
  string product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock = 5;
  string category_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CategoryEvent {
  string category_id = 1;
  string name = 2;
  string description = 3;
  string created_at = 4;
  string updated_at = 5;
}